syntax = "proto3";
package pubsubui;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/xhsun/gcp-pubsub-ui/pubsub-ui-server/internal/pubsubui";

service PubSubUI {
  // Fetch PubSub message from the provided PubSub Topic
  rpc Fetch(TopicSubscription) returns (stream Message) {}
  rpc Echo(TopicSubscription) returns (TopicSubscription) {
    option (google.api.http) = {
      post: "/pubsubui.PubSubUI/Echo"
      body: "*"
    };
  }
}

message TopicSubscription {
  string gcp_project_id = 1;
  string pubsub_topic_name = 2;
}

message Message {
  bytes data = 1;
  google.protobuf.Timestamp timestamp = 2;
}
